# bevy_blood_oath

./: .gitignore  Cargo.toml  README.md  fleet.toml  rustfmt.toml  serve.py  webglbuild.sh
.cargo/: config.toml
.github/workflows/: ci.yml  deploy-page.yaml  release.yaml
.trunk/: trunk.yaml
bo_ecs/: Cargo.toml
bo_ecs/src/: bundle.rs  effects.rs  events.rs  lib.rs  run_criteria.rs  setup.rs  state.rs
bo_ecs/src/components/: backpack.rs  combat.rs  description.rs  fov.rs  glyph.rs  intent.rs  items.rs  mod.rs  name.rs  particle.rs  position.rs  ranged.rs  stats.rs  tags.rs
bo_ecs/src/effects/: damage.rs  mod.rs  particle.rs  setup.rs
bo_ecs/src/queries/: mod.rs
bo_ecs/src/resources/: bundle.rs  criteria.rs  mod.rs  run_criteria.rs  state.rs
bo_logging/: Cargo.toml
bo_logging/src/: builder.rs  events.rs  lib.rs  logstore.rs
bo_map/: Cargo.toml
bo_map/src/: bitgrid.rs  lib.rs  map.rs  spatial.rs  themes.rs  tile.rs  tiletype.rs
bo_pathfinding/: Cargo.toml
bo_pathfinding/src/: astar.rs  lib.rs
bo_utils/: Cargo.toml
bo_utils/src/: bterm.rs  lib.rs  macros.rs  menus.rs  rng.rs
bo_utils/src/ecs/: mod.rs
bo_utils/src/render/: boxes.rs  color.rs  menus.rs  mod.rs
resources/raws/: items.ron  mobs.ron  props.ron  spawn_table.ron
src/: actions.rs  bitgrid.rs  events.rs  main.rs  menu_memory.rs  random_table.rs  resources.rs  rex_assets.rs  rng.rs  setup.rs  spawner.rs  turn.rs  utils.rs
src/components/: backpack.rs  colonist_status.rs  context.rs  description.rs  fov.rs  glyph.rs  gui.rs  intent.rs  items.rs  mod.rs  name.rs  position.rs  stats.rs  tags.rs  tile_trigger.rs
src/ecs/: events.rs  mod.rs
src/ecs/components/: backpack.rs  combat.rs  description.rs  equipment.rs  fov.rs  glyph.rs  hunger.rs  items.rs  mod.rs  particle.rs  position.rs  ranged.rs  stats.rs  tags.rs  trigger.rs
src/ecs/effects/: damage.rs  hunger.rs  mod.rs  particle.rs  triggers.rs
src/ecs/resources/: bundle.rs  camera.rs  mod.rs  run_criteria.rs  state.rs
src/ecs/systems/: end_turn.rs  fov.rs  hunger.rs  map_indexing.rs  melee_combat.rs  mod.rs  monster_ai.rs  movement.rs  particles.rs  player.rs  trigger.rs
src/ecs/systems/ai/: bystander_ai.rs  mod.rs  monster_ai.rs
src/ecs/systems/inventory/: collection_system.rs  drop_system.rs  mod.rs  use_system.rs
src/ecs/systems/render/: entity_renderer.rs  map_renderer.rs  mod.rs  tooltips.rs
src/effects/: damage.rs  mod.rs  particle.rs  queries.rs  setup.rs  triggers.rs
src/game/: damage.rs  map_indexing.rs  melee_combat.rs  mod.rs  mode.rs  movement.rs  player.rs
src/game/dungeon/: mod.rs  setup.rs
src/game/dungeon/systems/: damage.rs  end_turn.rs  map_indexing.rs  melee_combat.rs  mod.rs  monster_ai.rs  movement.rs  player.rs
src/game/dungeon/systems/inventory/: collection_system.rs  item_use_system.rs  mod.rs  use_system.rs
src/game/game_over/: mod.rs
src/game/inventory/: collection_system.rs
src/game/main_menu/: mod.rs
src/game/render/: camera.rs  mod.rs
src/game/render/gui/: boxes.rs  constants.rs  mod.rs
src/game/render/gui/menus/: inventory.rs  item_result.rs  mod.rs  show_inventory.rs
src/gamelog/: builder.rs  events.rs  logstore.rs  mod.rs
src/map/: bitgrid.rs  dungeon.rs  layer.rs  map.rs  mod.rs  spatial.rs  themes.rs  tile.rs  tiletype.rs
src/map/layerbuilder/: colonist.rs  entrance.rs  mod.rs
src/map/map_builders/: common.rs  mod.rs  random.rs
src/map/map_builders/builders/: cellular_automata.rs  dla.rs  drunkard.rs  maze.rs  mod.rs  simple_map.rs  voronoi.rs
src/map/map_builders/builders/bsp/: bsp_dungeon.rs  bsp_interior.rs  mod.rs
src/map/map_builders/builders/meta_builders/: cull_unreachable.rs  distant_exit.rs  door_placement.rs  mod.rs  voronoi_spawning.rs  wall_boundaries.rs
src/map/map_builders/maps/: mod.rs
src/modes/: app_quit_dialog.rs  map_gen.rs  menu_memory.rs  mod.rs  targeting_mode.rs  title.rs  yes_no_dialog.rs
src/modes/dialogs/: app_quit_dialog.rs  message_box.rs  mod.rs  yes_no_dialog.rs
src/modes/dungeon/: mod.rs  setup.rs
src/modes/dungeon/render/: camera.rs  mod.rs
src/modes/dungeon/systems/: end_turn.rs  fov.rs  map_indexing.rs  melee_combat.rs  mod.rs  monster_ai.rs  movement.rs  particle_system.rs  player.rs
src/modes/dungeon_mode/: mod.rs  player.rs
src/modes/game_over/: mod.rs
src/modes/game_over_mode/: mod.rs
src/modes/inventory/: mod.rs
src/modes/inventory_mode/: equipment_action.rs  inventory_action.rs  mod.rs
src/modes/main_menu/: mod.rs
src/modes/main_menu_mode/: mod.rs
src/raws/: mod.rs
src/raws/rawmaster/: load.rs  mod.rs  parse.rs  spawn.rs
src/raws/templates/: item_templates.rs  mob_templates.rs  mod.rs  prop_templates.rs  spawn_table_templates.rs
src/render/: camera.rs  mod.rs  modal.rs  tooltips.rs
src/render/camera/: entity_renderer.rs  map_renderer.rs  mod.rs  tooltips.rs
src/render/gameover/: dead.rs  mod.rs
src/render/gui/: colony_info.rs  main_menu.rs  mod.rs  queries.rs  skeleton.rs  status.rs
src/render/gui/game_menus/: confirm.rs  inventory.rs  mod.rs  ranged.rs
src/render/gui/menus/: inventory.rs  main_menu.rs  mod.rs  ranged.rs
src/render/gui/title_menus/: game_over.rs  main_menu.rs  mod.rs
src/resources/: bundle.rs  mod.rs  run_criteria.rs  state.rs
src/saveload/: loading.rs  mod.rs  saving.rs
src/setup/: mod.rs
src/systems/: damage_system.rs  end_turn.rs  fov.rs  fov_system.rs  map_indexing_system.rs  melee_combat.rs  melee_combat_system.rs  mod.rs  monster_ai.rs  monster_ai_system.rs  movement.rs  particles.rs  player.rs
src/systems/dispatcher/: mod.rs  multi_thread.rs  single_thread.rs
src/systems/input/: exit_system.rs  mod.rs  player_input_system.rs
src/systems/inventory/: collection_system.rs  drop_system.rs  equip_use.rs  mod.rs  remove_system.rs  use_system.rs
src/utils/: bterm.rs  macros.rs  magicnum.rs  mod.rs  rng.rs
src/utils/ecs/: mod.rs  spawn_list.rs
src/utils/render/: boxes.rs  color.rs  menu.rs  menus.rs  mod.rs  string.rs
wasm_help/: index.html
wasm_help/staging/: bload_oath.js  bload_oath_bg.wasm  blood_oath.js  blood_oath_bg.wasm
(+40 files in other folders)
