[package]
edition = "2021"
name = "bload_oath"
version = "0.1.0"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
codegen-units = 1
lto = true

[features]
default = ["bevy/dynamic", "bracket-lib/threaded"]
web = []

[dependencies]
bo_logging = { path = "bo_logging/" }
bo_pathfinding = { path = "bo_pathfinding/" }

# Core Crates
bracket-lib = { git = "https://github.com/lecoqjacob/bracket-lib", branch = "custom", features = ["serde", "bevy"] }

bevy = { version = "~0.8.0", default-features = false }
iyes_loopless = "~0.7.0"

# Utility Crates
bitvec = { version = "^1.0.1", features = ["serde"] }
console_error_panic_hook = "0.1"
lazy_static = "^1.4.0"
parking_lot = { version = "^0.12.1", features = ["nightly"] }
ron = "^0.7.1"
serde = { version = "^1.0.140", features = ["derive"] }

[build-dependencies]
embed-resource = "^1.7.3"

[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!

members = ["bo_logging", "bo_pathfinding"]
