[package]
edition = "2021"
name    = "bload_oath"
version = "0.1.0"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
codegen-units = 1
lto           = true

[features]
default = ["bevy/dynamic", "bracket-lib/threaded", "bevy/bevy_scene"]
web     = []

[dependencies]
bo_logging = { path = "bo_logging/" }

# Core Crates
bracket-lib = { git = "https://github.com/lecoqjacob/bracket-lib", branch = "custom", features = [
  "serde",
  "bevy",
] }
bracket-state-machine = { git = "https://github.com/lecoqjacob/bracket-state-machine", branch = "custom" }

bevy          = { version = "~0.8" }
iyes_loopless = "~0.7"

# Utility Crates
bitvec                   = { version = "^1", features = ["serde"] }
console_error_panic_hook = "0.1"
env_logger               = "0.9"
lazy_static              = "^1"
log                      = "0.4"
parking_lot              = { version = "^0.12", features = ["nightly"] }
ron                      = "^0.8"
serde                    = { version = "^1", features = ["derive"] }
serde_json               = "1"

[build-dependencies]
embed-resource = "^1"

[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!

members = ["bo_logging"]
