[package]
name = "bo_ecs"
version = "0.1.0"
authors = ["Jacob LeCoq <lecoqjacob@gmail.com>"]
edition = "2021"

[dependencies]
bo_map = { path = "../bo_map" }
bracket-geometry = "^0.8.3"
bracket-color = "^0.8.2"
bracket-terminal = "^0.8.5"
bevy_ecs = { version = "~0.7.0" }

parking_lot = "^0.12.1"
lazy_static = "^1.4.0"
