[package]
name = "bo_ecs"
version = "0.1.0"
authors = ["Jacob LeCoq <lecoqjacob@gmail.com>"]
edition = "2021"

[dependencies]
bo_map = { path = "../bo_map" }
bo_utils = { path = "../bo_utils" }
bo_logging = { path = "../bo_logging" }

bracket-pathfinding = "^0.8.4"
bracket-geometry = "^0.8.3"
bracket-terminal = "^0.8.5"
bracket-algorithm-traits = "^0.8.2"

bevy_ecs = { git = "https://github.com/bevyengine/bevy" }
bevy_app = { git = "https://github.com/bevyengine/bevy" }
iyes_loopless = { git = "https://github.com/iyesgames/iyes_loopless", branch = "bevy_main" }

parking_lot = "^0.12.1"
lazy_static = "^1.4.0"
