[package]
authors = ["Jacob LeCoq <lecoqjacob@gmail.com>"]
edition = "2021"
name = "bo_logging"
version = "0.1.0"

[dependencies]
bracket-lib = { git = "https://github.com/lecoqjacob/bracket-lib", branch = "custom", features = ['serde', 'bevy'] }
lazy_static = "^1"
parking_lot = { version = "^0.12", features = ["nightly"] }
textwrap = "0.15.0"
