[package]
name = "bo_map"
version = "0.1.0"
authors = ["Jacob LeCoq <lecoqjacob@gmail.com>"]
edition = "2021"

[dependencies]
bo_ecs = { path = "../bo_ecs" }
bo_utils = { path = "../bo_utils" }

bracket-geometry = "^0.8.3"
bracket-terminal = "^0.8.5"
bracket-pathfinding = "^0.8.4"

bitvec = { version = "^1.0.1", features = ['serde'] }
lazy_static = "^1.4.0"
parking_lot = "^0.12.1"
serde = { version = "^1.0.140", features = ["derive"] }
